--- a/localite/src/styles/home.css
+++ b/localite/src/styles/home.css
@@ -1,1068 +1,34 @@
 /* General styles for the Home component */
-body {
-  background-color: #edf4ff;
-  margin: auto;
-}
 
 #merchantform{
   width: 55%;
 }
 
-.popup-message2 {
-  margin-top: 20px;
-  padding: 10px;
-  background-color: #000;
-  color: #fff;
-  border-radius: 4px;
-  text-align: center;
-}
-
-
-.btndivs{
-  display: flex;
-  justify-content: space-evenly;
-}
-
-
-/* App.css or your main stylesheet */
-
-/* Overlay styles */
-.overlay {
-  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* Modal styles */
-.modal {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* background: #fff; */
-  padding: 20px;
-  border-radius: 8px;
-  width: 90%;
-  max-width: 1200px;
-  margin-top: -8000px;
-  position: relative;
-  border: none;
-}
-
-.close {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  font-size: 28px;
-  cursor: pointer;
-  background: none;
-  border: none;
-  color: black;
-}
-
-video {
-  width: 90%;
-  height: auto;
-}
-
-/* Blurred background effect */
-#blurred {
-  filter: blur(4px); /* Adjust the blur intensity as needed */
-  transition: filter 0.3s ease;
-}
-
-
-/* styles.css or your CSS module */
-.heading-container {
-  position: relative;
-  overflow: hidden;
-  height: 1.5em; /* Adjust based on your font size */
-}
-
-.heading-content {
-  position: absolute;
+.firstdiv{
   width: 100%;
-  display: flex;
-}
-
-.heading-name {
-  flex: 1;
-  white-space: nowrap;
-}
-
-.slide-up-enter {
-  transform: translateY(100%);
-}
-
-.slide-up-enter-active {
-  transform: translateY(0);
-  transition: transform 0.5s ease;
-}
-
-.slide-up-exit {
-  transform: translateY(0);
-}
-
-.slide-up-exit-active {
-  transform: translateY(-100%);
-  transition: transform 0.5s ease;
-}
-
-
-
-.home-container {
-  width: auto;
-  margin-left: 10px;
-  padding: 10px;
-  font-family: Arial, sans-serif;
-  background-color: #edf4ff;
-  margin: auto;
-  box-sizing: border-box;
-}
-
-.home-container p {
-  color: #555;
-  line-height: 1.6;
-  margin-bottom: 20px;
-}
-
-#slider-image {
-  width: 100%;
-  height: auto;
-  display: block;
-  margin: 0 auto;
-}
-
-.highlight {
-  color: #68cfb0;
-}
-
-.firstdiv {
-  font-size: x-large;
-  /* margin-top: 40px; */
   text-align: center;
-  justify-content: center;
-}
-
-.firstdiv img{
-  height: 240px;
 }
 
 .video{
-  margin-top: 20px;
-  width: 80%;
-}
-
-/* .contentdiv {
-  background-color: black;
-  height: 470px;
-  width: 100%;
-} */
-
-.getstartedbtn {
-  background-color: #f61717;
-  padding: 10px 65px;
-  color: white;
-  border: none;
-  border-radius: 10px;
-  margin: auto;
-  font-size: 50px;
-  margin-top: 15px;
-  margin-bottom: 30px;
-  /* font-weight: bold; */
-}
-#services h1{
-  margin: auto;
- width: 60%;
- margin-bottom: 20px;
-}
-
-
-.whyusdiv {
-  width: 90%;
-  margin: auto;
-  margin-top: 50px;
-  background-color: #2b3149;
   text-align: center;
-  color: white;
-  padding-top: 25px;
-  box-sizing: border-box;
-}
-
-#whymain{
-  display: flex;
-}
-
-.whyusdiv h3 {
-  text-align: left;
-}
-
-.whyusdiv h1{
-  margin-top: -10px;
-}
-.whyusdiv p{
-  font-size: 40px;
-}
-
-.whycontent, .aboutuscontent, .featurecontent {
-  padding: 30px;
-  box-sizing: border-box;
-}
-
-.aboutuscontent {
-  color: rgb(133, 137, 141);
-}
-
-
-.whyusdiv img {
-  width: 350px;
-  /* max-width: 300px; */
-  height: 280px;
-  border-radius: 10px;
-}
-
-.howdiv{
-  display: flex;
-  justify-content: center;
-  /* margin: auto; */
-}
-
-.howdiv img{
- width: 500px;
- height: 350px;
-}
-
-.howdiv h4{
-  font-size: 30px;
-}
-
-.how1img{
-  margin-left: 110px;
-}
-
-.how2img{
-  margin-left: 110px;
-}
-
-.how3img{
-  margin-left: 110px;
-}
-
-.how4img{
-  margin-left: 110px;
-}
-
-.how5img{
-  margin-left: 110px;
-}
-
-.how4img img, .how5img img{
-border-radius: 30px;
-}
-
-
-.Aboutus {
-  width: 100%;
-  margin: auto;
-  text-align: center;
-}
-
-.Aboutus h1 {
-  color: black;
-}
-
-.Aboutus img {
-  width: 100%;
-  /* max-width: 320px;  */
-  border-radius: 20px;
-  height: auto;
-}
-
-.followdiv {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.followdiv img {
-  border: 50%;
-  width: 50px;
-  height: 50px;
-}
-
-.featurediv {
-  padding-top: 40px;
-  padding-bottom: 60px;
-
-  background-color: #2b3149;
-  border-radius: 20px;
-  color: white;
-  text-align: center;
-  margin: auto;
-  width: 100%;
-}
-
-.featurediv h1{
-  margin-top: -20px;
-}
-
-/* .featurediv img {
-  width: 600px;
-  height: 300px;
-  margin: 0;
-  border: 1px solid red;
-  border-radius: 20px;
-} */
-
-.whycon{
-  font-size: 25px;
-  margin: auto;
-  margin-top: 80px;
-  width: 80%;
-  text-align: left;
-}
-
-.advertiserdiv {
-  text-align: center;
-  width: 100%;
-  margin: auto;
-  padding-top: 5px;
-  background-color: #a9b3da;
-  height: fit-content;
-}
-
-.advertiserdiv h2 {
-  color: #2b3149;
-}
-
-.adverdivs div {
-  margin: auto;
-  width: 50%;
-  height: 100px;
-  border-radius: 10px;
-  background-color: white;
-}
-
-.adverdivs {
-  display: grid;
-  row-gap: 20px;
-  grid-template-columns: repeat(4, 1fr);
-  padding: 5px;
-}
-
-.sellwith {
-  width: 100%;
-  margin-top: 50px;
-  text-align: center;
-}
-
-.sellwith .frdiv {
-  margin: auto;
-  width: 90%;
-  border-radius: 20px;
-  color: white;
-  background-color: #2b3149;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  box-sizing: border-box;
-}
-
-
-.frdiv .lh1{
-  color: #f61717;
-}
-
-.sediv {
-  margin-top: 20px;
-  margin: auto;
-  width: 70%;
-  text-align: left;
-}
-.sediv ul{
-  font-size: 25px;
-}
-.sediv p{
-  padding-right: 20px;
-/* color: rgb(173, 173, 173); */
-margin-left: 8px;
-color: rgb(238, 238, 238);
-font-size: smaller;
-}
-
-.community {
-  color: #68cfb0;
-}
-
-.faq {
-  padding: 10px;
-  width: 45%;
-  margin-left: 30%;
-  /* text-align: left; */
-}
-
-.faq h1{
-  text-align: center;
-}
-
-
-.faq h5{
-  color: #555;
-  width: 100%;
-  cursor: pointer;
-  /* text-align: left; */
-}
-
-.faq h4{
-  cursor: pointer;
-  /* text-align: left; */
-}
-
-.selling {
-  padding: 20px 30px;
-}
-
-.selling img {
-  width: 100%;
-  margin-left: 10px;
-  max-width: 180px;
-}
-
-.selling img:nth-child(3) {
-  margin-top: -100px;
-}
-
-.selling img:nth-child(2) {
-  margin-top: -70px;
-}
-
-.contactus1{
- padding: 20px;
- gap: 20px;
- font-family: 'Arial, sans-serif';
-  width:80%;
-  margin: auto;
-  display: flex;
-}
-
-.contactform{
-  margin-top: 40px ;
-  width: 50% ;
-}
-/* Footer Styles */
-.footer {
-  width: 100%;
-  margin-top: -50px;
-  background-color: #2b3149;
-  color: #fff;
-  padding: 20px 20px 10px 20px;
-  box-sizing: border-box;
-}
-.mainfooter{
-  width: 85%;
-  margin: auto;
-  display: flex;
-}
-
-.footer-content {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.footer-content p{
-  font-size: 13px;
-  margin-left: 6px;
-}
-
-.footer-section {
-  flex-basis: 30%;
-  margin-bottom: 30px;
-}
-.footer-section .img1{
-  margin-top: 20px;
-  
-}
-
-.footer-section h3 {
-  font-size: 18px;
-  margin-bottom: 10px;
-}
-
-.footer-section p {
-  font-size: 14px;
-  line-height: 1.5;
-}
-
-.footer-section ul {
-  list-style: none;
-  line-height: 22px;
-  padding: 0;
-}
-
-.footer-section ul li {
-  margin-bottom: 3px;
-  font-size: smaller;
-  font-weight: bold;
-}
-
-.footer-section ul li a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.footer-section form {
-  display: flex;
-}
-
-.footer-section form input {
-  padding: 8px;
-  border: none;
-  width: 240px;
-  border-radius: 30px;
-}
-
-.footer-section form button {
-  background-color: #f61717;
-  border-radius: 30px;
-  color: white;
-  border: none;
-  margin-left: -25px;
-  padding: 8px 12px;
-  cursor: pointer;
-}
-
-.footer-bottom {
-  text-align: center;
-  font-size: 14px;
-}
-
-.whitelogo {
-  width: 200px;
-}
-
-#footerline {
-  width: 85%;
-  margin-top: 20px;
-  background-color: red;
-  border-color: red;
-}
-
-.footer-section img {
-  width: 30px;
-  border-radius: 50%;
-  margin-left: 20px;
-}
-
-#footerimgs img{
-  width: 28px;
- }
-
-/* //////////// */
-
-.scroll-to-top {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background-color: #007bff; /* Choose your desired background color */
-  color: white;
-  border: none;
-  padding: 10px 20px;
   border-radius: 5px;
-  cursor: pointer;
-  z-index: 1000; /* Ensure it appears above other elements */
-  display: none; /* Hide initially */
-}
-
-.scroll-to-top.show {
-  display: block; /* Show when scrolled */
-}
-
-.twodivs {
-  display: flex;
-  width: 90%;
-  justify-content: space-between;
-  padding-left: 50px;
-  /* margin-left: 30px; */
-}
-
-.mainmain {
-  margin-left: 10px;
   margin: auto;
-  width: 100%;
-  max-width: 100%;
-  box-sizing: border-box;
-}
-
-/* Ensure body and html take up the full height and prevent overflow */
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  overflow-x: hidden;
-}
-
-
-  /* ///////////// */
-
-/* Mobile Styles */
-@media (max-width: 1000px) {
-/* //////////// */
-
-.home-container {
-  width: auto;
-  margin-left: 10px;
-  padding: 10px;
-  font-family: Arial, sans-serif;
-  background-color: #edf4ff;
-  margin: auto;
-  box-sizing: border-box;
-}
-
-.modal {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* background: #fff; */
-  padding: 20px;
-  border-radius: 8px;
   width: 80%;
-  max-width: 800px;
-  margin-top: -10200px;
-  position: absolute;
 }
 
-
-#merchantform{
-  width: 90%;
-}
-
-.home-container p {
-  color: #555;
-  line-height: 1.6;
-  margin-bottom: 20px;
-}
-
-#slider-image {
-  margin: auto;
-  width: 100%;
-  height: 350px;
-}
-
-.highlight {
-  color: #68cfb0;
-}
-
-.firstdiv {
-  font-size: medium;
-  margin-top: -15px;
-  text-align: center;
-  justify-content: center;
-}
-
-.firstdiv img{
-  height: 240px;
-}
-
-.video{
-  margin: auto;
-  width: 96%;
-}
-/* .contentdiv {
-  background-color: black;
-  height: 470px;
-  width: 100%;
-} */
-
-.getstartedbtn {
-  background-color: #f61717;
-  padding: 10px 35px;
-  color: white;
-  border: none;
-  border-radius: 10px;
-  margin: auto;
-  font-size: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  font-weight: bold;
-}
-
-#services h1{
-  margin: auto;
- width: 100%;
- margin-bottom: 20px;
-}
-
-
-.whyusdiv {
-  width: 100%;
-  margin: auto;
-  margin-top: 50px;
-  background-color: #2b3149;
-  text-align: center;
-  color: white;
-  padding-top: 25px;
-  box-sizing: border-box;
-}
-#whymain{
-  display: block;
-}
-
-.whyusdiv h3 {
-  text-align: left;
-}
-
-.whycontent, .aboutuscontent, .featurecontent {
-  padding: 30px;
-  box-sizing: border-box;
-}
-
-.aboutuscontent {
-  color: rgb(133, 137, 141);
-}
-
-.whyusdiv img {
-  width: 90%;
-  /* max-width: 300px; */
-  height: 280px;
-  border-radius: 10px;
-}
-
-.whycon{
-  font-size: medium;
-  width: 90%;
-  margin: auto;
-}
-
-.howdiv{
-  display: block;
-}
-
-.Aboutus {
-  width: 100%;
-  margin: auto;
+.introdiv{
+  background: linear-gradient(to bottom, #fce5e5, #fef2f2);
   text-align: center;
 }
 
-.Aboutus h1 {
-  color: black;
-}
-
-.Aboutus img {
-  width: 100%;
-  /* max-width: 320px;  */
-  border-radius: 20px;
-  height: auto;
-}
-
-.followdiv {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.followdiv img {
-  border: 50%;
-  width: 50px;
-  height: 50px;
-}
-
-.featurediv {
-  text-align: center;
-  margin: auto;
-  width: 100%;
-}
-
-.featurediv img {
-  width: 80%;
-  height: fit-content;
-  border-radius: 20px;
-}
-
-
-.howdiv h4{
-  text-align: center;
-  margin-top: -30px;
-  font-size: 20px;
-}
-
-.how1img,.how2img, .how3img, .how4img, .how5img{
-  margin: auto;
-}
-
-.whyusdiv h3 {
-  text-align: center;
-}
-
-
-.advertiserdiv {
-  text-align: center;
-  width: 100%;
-  margin: auto;
-  padding-top: 5px;
-  background-color: #a9b3da;
-  height: fit-content;
-}
-
-.advertiserdiv h2 {
-  color: #2b3149;
-}
-
-.adverdivs div {
-  margin: auto;
-  width: 50%;
-  height: 100px;
-  border-radius: 10px;
-  background-color: white;
-}
-
-.adverdivs {
-  display: grid;
-  row-gap: 20px;
-  grid-template-columns: repeat(4, 1fr);
-  padding: 5px;
-}
-
-.sellwith {
-  width: 100%;
-  margin-top: 20px;
-  text-align: center;
-}
-
-.sellwith .frdiv {
-  margin: auto;
-  width: 90%;
-  border-radius: 20px;
-  color: white;
-  background-color: #2b3149;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  box-sizing: border-box;
-}
-
-.sediv {
-  margin-top: 20px;
-  margin: auto;
-  width: 100%;
-  text-align: left;
-}
-.sediv p{
-  padding-right: 20px;
-/* color: rgb(173, 173, 173); */
-margin-left: 8px;
-color: rgb(238, 238, 238);
-font-size: smaller;
-}
-
-.sediv ul{
-  font-size: medium;
-}
-
-.community {
-  color: #68cfb0;
-}
-
-.faq {
-  width: 90%;
-  margin: auto;
-  text-align: left;
-}
-
-.faq h1{
-  text-align: center;
-}
-.faq select {
-  font-size: medium;
-  width: 80%;
-  border: none;
-  background-color: #edf4ff;
-  font-weight: bold;
-  margin-top: 10px;
-}
-
-.faq h5{
-  color: #555;
-  width: 78%;
-  margin: auto;
-  text-align: left;
-}
-
-.selling {
-  padding: 20px 30px;
-}
-
-.selling img {
-  width: 100%;
-  margin-left: 10px;
-  max-width: 180px;
-}
-
-.selling img:nth-child(3) {
-  margin-top: -100px;
-}
-
-.selling img:nth-child(2) {
-  margin-top: -70px;
-}
-
-.contactus1{
-  width: 100%;
-   display: block;
- }
-
- .contactform{
-  margin-top: 40px ;
-  width: 90% ;
-}
-
-/* Footer Styles */
-.footer {
-  width: 100%;
-  margin-top: -50px;
-  background-color: #2b3149;
-  color: #fff;
-  padding: 0px 20px 10px 20px;
-  box-sizing: border-box;
-}
-.mainfooter{
-  width: 100%;
-  display: block;
-}
-.footer-content {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.footer-content p{
-  font-size: 13px;
-  margin-left: 6px;
-}
-
-.footer-section {
-  flex-basis: 30%;
-  margin-bottom: 30px;
-}
-.footer-section .img1{
-  margin-top: 20px;
-  
-}
-
-.footer-section h3 {
-  font-size: 18px;
-  margin-bottom: 10px;
-}
-
-.footer-section p {
-  font-size: 14px;
-  line-height: 1.5;
-}
-
-.footer-section ul {
-  list-style: none;
-  padding: 0;
-}
-
-.footer-section ul li {
-  margin-bottom: 3px;
-  font-size: smaller;
-  font-weight: bold;
-}
-
-.footer-section ul li a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.footer-section form {
+introdiv{
   display: flex;
 }
 
-.footer-section form input {
-  padding: 8px;
-  border: none;
-  width: 240px;
-  border-radius: 30px;
-}
-
-.footer-section form button {
-  background-color: #f61717;
-  border-radius: 30px;
-  color: white;
-  border: none;
-  margin-left: -25px;
-  padding: 8px 12px;
-  cursor: pointer;
-}
-
-.footer-bottom {
-  text-align: center;
-  font-size: 14px;
-}
-#footerimgs img{
- width: 28px;
-}
-
-
-
-.whitelogo {
-  width: 200px;
-}
-
-.footerline {
-  width: 95%;
-  margin-top: 5px;
-  background-color: red;
-  border-color: red;
-}
-
-.footer-section img {
-  width: 30px;
-  border-radius: 50%;
-  margin-left: 20px;
-}
-
-/* //////////// */
-
-.scroll-to-top {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background-color: #007bff; /* Choose your desired background color */
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  z-index: 1000; /* Ensure it appears above other elements */
-  display: none; /* Hide initially */
-}
-
-.scroll-to-top.show {
-  display: block; /* Show when scrolled */
-}
-
-.twodivs {
+.videoandbtn{
   display: flex;
-  width: 100%;
-  padding-left: 0px;
-
-  gap: 80px;
-  justify-content: space-around;
 }
 
-.mainmain {
-  margin-left: 10px;
-  margin: auto;
-  width: 100%;
-  max-width: 100%;
-  box-sizing: border-box;
-}
-
-/* Ensure body and html take up the full height and prevent overflow */
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  overflow-x: hidden;
-}
-
-
+.videoandbtn img{
+width: 18%;
 }
