--- a/localite/src/styles/footer.css
+++ b/localite/src/styles/footer.css
@@ -53,3 +53,12 @@ justify-content: space-between;
     margin-top: 10px;
     margin-left: 30px;
     }
+
+Link{
+    text-decoration: none;
+}
+
+a{
+    text-decoration: none;
+    color: rgb(96, 96, 96);
+  }
