--- a/localite/src/styles/home.css
+++ b/localite/src/styles/home.css
@@ -416,6 +416,7 @@ font-size: 20px;
   background-color: white;
   margin: auto;
   text-align: left;
+  padding: 10px 1px;
 }
 
 .faq h1{
@@ -444,6 +445,22 @@ font-size: 20px;
   margin-right: 20px;
 }
 
+.top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  color: white;
+  border: none;
+  border-radius: 50px;
+  padding: 10px 20px;
+  font-size: 25px;
+  cursor: pointer;
+  z-index: 100; /* Ensure it's above other content */
+}
+
+.top.show {
+  display: block; /* Show when scrolling */
+}
 
 
 
