updted code only sticky navbar pending

--- a/localite/src/styles/footer.css
+++ b/localite/src/styles/footer.css
@@ -138,5 +138,10 @@
     .footer img {
       width: 50%; /* Further adjust image size for mobile */
     }
+
+    a{
+        text-decoration: none;
+        width: 100%;
+      }
   }
   
