css size updated 1111

--- a/localite/src/styles/home.css
+++ b/localite/src/styles/home.css
@@ -165,7 +165,7 @@ cursor: pointer;
 
 }
 .aboutline{
-  color: rgb(72, 165, 165);
+  color: #2A6171;
 }
 
 
@@ -218,7 +218,7 @@ cursor: pointer;
 }
 
 .threecolordivmain h3{
-  color: rgb(13, 95, 95);
+  color: #2A6171;
 }
 
 .threecolordiv{
@@ -312,7 +312,7 @@ font-size: 20px;
   }
 
 .sellcolor{
-  color: rgb(114, 207, 207);
+  color: #2A6171;
 }
 
 .sellbutton{
@@ -367,7 +367,7 @@ font-size: 20px;
 }
 
 .pcolor{
-  color: rgb(61, 192, 192);
+  color: #2A6171;
 }
 
 .siximages {
