--- a/localite/src/styles/home.css
+++ b/localite/src/styles/home.css
@@ -44,12 +44,13 @@ a{
 .headcon{
   padding-left: 30%;
   margin-top: 40%;
+  width: 70%;
   /* border: 1px solid red; */
+  z-index: 10000000000;
 }
 
 .balls{
 position: absolute;
-z-index: 1000;
 width:60%;
 margin-left: 10%;
 margin-top: -50%;
@@ -68,7 +69,7 @@ margin-top: -50%;
   color: #7DB9B4;;
 }
 .intoline{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Futura', sans-serif;
   font-weight: 400;
   font-size: 60px;
   text-align: center;
