--- a/localite/src/styles/home.css
+++ b/localite/src/styles/home.css
@@ -29,6 +29,7 @@ a{
   border-radius: 5px;
   margin: auto;
   width: 80%;
+  border: 20px solid black;
 }
 
 .introdiv .indiv{
@@ -40,6 +41,16 @@ a{
   display: flex;
   margin-top: -80px;
 }
+
+.intoline {
+  color: #343232; /* Text color */
+  text-shadow: 0 0 10px rgba(245, 30, 101, 0.5),
+               0 0 20px rgba(243, 28, 139, 0.4),
+               0 0 30px rgba(233, 123, 123, 0.3),
+               0 0 40px rgba(245, 73, 73, 0.2),
+               0 0 50px rgba(246, 141, 197, 0.1);
+}
+
 
 .headcon{
   padding-left: 30%;
@@ -133,7 +144,7 @@ cursor: pointer;
 
 .threedivs{
   position: relative;
-  width: 80%;
+  width: 85%;
   display: flex;
   margin: auto;
   gap: 15px;
@@ -141,7 +152,7 @@ cursor: pointer;
 }
 
 .threedivs div h3{
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .threedivs div {
@@ -369,6 +380,7 @@ font-size: 20px;
 
 .pcolor{
   color: #2A6171;
+  cursor: pointer;
 }
 
 .six{
@@ -510,16 +522,18 @@ font-size: 20px;
   }
 
   .firstdiv, .introdiv {
-    display: block; /* Stack elements vertically */
+    display: block; 
     width: 100%;
     text-align: center;
+    margin-top: 0;
   }
 
   .video {
     width: 95%;
   }
-
+  
   .headcon {
+    margin: 40px auto;
     padding: 10%;
   }
 
@@ -553,6 +567,11 @@ font-size: 20px;
   .videoandbtn img {
     margin-top: 10px;
     width: 45%; /* Adjust image width for mobile */
+  }
+
+  .video{
+    margin-top: -100px;
+    border: 2px solid black;
   }
 
   .handmobile {
@@ -654,7 +673,7 @@ font-size: 20px;
 
   .threecolordivmain{
     width: 95%;
-    margin-top: -30%;
+    margin-top: -10%;
   }
 
   .threecolordiv {
