--- a/localite/src/styles/home.css
+++ b/localite/src/styles/home.css
@@ -139,7 +139,37 @@ cursor: pointer;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: rgb(69, 141, 141);
   font-weight: 400;
-  padding: 0px 500px;
+  padding: 0px 400px;
+}
+
+.borderh{
+  border: 2px solid black;
+  border-radius: 10px;
+  margin: auto;
+  padding: 5px;
+  width: fit-content;
+  font-size: 40px;
+}
+
+.mddiv{
+  width: 80%;
+  display: flex;
+  gap: 20px;
+  margin:10px auto;
+}
+
+.mddiv h2{
+  font-size: 28px;
+  font-weight: 450;
+}
+
+.mediaimg{
+  width: 50%;
+  margin: auto;
+  border-radius: 10px;
+}
+.socialmedia{
+  margin-top: 50px;
 }
 
 .threedivs{
@@ -226,7 +256,7 @@ cursor: pointer;
   width: 100%;
   margin: auto;
   background-color: white;
-  padding: 60px 10px;
+  padding: 20px 10px;
 }
 
 .threecolordivmain h3{
